--- a/index.html
+++ b/index.html
@@ -1,224 +1,295 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RDMWebTech – Modern Web Development</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
     <style>
-        body { 
-            font-family: 'Segoe UI', sans-serif; 
+        /* BODY */
+        body {
             scroll-behavior: smooth;
+            font-family: 'Segoe UI', sans-serif;
+            background: #f5f7fa;
+            margin: 0;
+            padding: 0;
         }
-        .navbar {
+
+        /* HEADER (GLASS + GRADIENT ON SCROLL) */
+        header {
             position: fixed;
             top: 0;
-            left: 0;
             width: 100%;
-            z-index: 1000;
+            z-index: 999;
+            transition: all 0.4s ease;
+            backdrop-filter: blur(12px);
+            background: rgba(255, 255, 255, 0.15);
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
         }
-        .hero {
-            background: linear-gradient(135deg, #0d6efd, #6610f2);
-            color: white;
-            padding: 160px 0 120px;
+
+        header.scrolled {
+            background: linear-gradient(135deg, #6a11cb, #2575fc);
+            box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+        }
+
+        .navbar-nav .nav-link {
+            color: #222;
+            font-weight: 600;
+            transition: color 0.3s;
+        }
+
+        header.scrolled .nav-link {
+            color: #fff;
+        }
+
+        .navbar-nav .nav-link:hover {
+            color: #2575fc;
+        }
+
+        /* HERO */
+        #home {
+            padding-top: 160px;
+            padding-bottom: 120px;
+            background: linear-gradient(135deg, #6a11cb, #2575fc);
+            color: #fff;
             text-align: center;
+            border-bottom-left-radius: 60px;
+            border-bottom-right-radius: 60px;
         }
-        .hero h1 {
-            font-size: 3rem;
+
+        #home h1 {
             font-weight: 700;
+            font-size: 3rem;
         }
-        .service-card, .tech-card, .contact-card {
-            transition: .3s;
-            border-radius: 12px;
+
+        #home p {
+            font-size: 1.2rem;
+            margin-top: 20px;
         }
-        .service-card:hover, .tech-card:hover, .contact-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(0,0,0,0.12);
+
+        #home .btn {
+            margin-top: 30px;
         }
+
+        /* SECTION TITLES */
+        .section-title {
+            font-weight: 700;
+            font-size: 2rem;
+            margin-bottom: 40px;
+        }
+
+        /* GLASS CARDS */
+        .glass-card {
+            background: rgba(255, 255, 255, 0.65);
+            backdrop-filter: blur(12px);
+            border-radius: 18px;
+            padding: 25px;
+            border: 1px solid rgba(255, 255, 255, 0.4);
+            transition: 0.3s;
+        }
+
+        .glass-card:hover {
+            transform: translateY(-6px);
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+        }
+
+        /* SECTIONS */
+        .soft-section {
+            background: linear-gradient(180deg, #ffffff, #f1f4f9);
+            padding: 60px 0;
+        }
+
+        /* CONTACT CARDS */
+        .contact-card i {
+            font-size: 40px;
+            margin-bottom: 10px;
+        }
+
+        /* FOOTER */
         footer {
             background: #111;
             color: #ccc;
             padding: 30px 0;
             text-align: center;
         }
-        .section-title {
-            font-weight: 700;
-            font-size: 2rem;
-        }
-        html {
-            scroll-padding-top: 80px;
+
+        /* RESPONSIVE */
+        @media(max-width:768px){
+            #home h1 {
+                font-size: 2rem;
+            }
         }
     </style>
 </head>
 
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="javascript:void(0)">RDMWebTech</a>
+    <!-- NAVBAR -->
+    <header id="mainHeader">
+        <nav class="navbar navbar-expand-lg container py-3">
+            <a class="navbar-brand fw-bold fs-3" href="#">RDMWebTech</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navMenu">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="javascript:void(0)" onclick="scrollToSection('home')">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="javascript:void(0)" onclick="scrollToSection('services')">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="javascript:void(0)" onclick="scrollToSection('technologies')">Technologies</a></li>
-                    <li class="nav-item"><a class="nav-link" href="javascript:void(0)" onclick="scrollToSection('about')">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="javascript:void(0)" onclick="scrollToSection('contact')">Contact</a></li>
+                <ul class="navbar-nav ms-auto fw-semibold">
+                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#technologies">Technologies</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
-    <!-- Smooth scroll JS -->
-    <script>
-        function scrollToSection(id) {
-            document.getElementById(id).scrollIntoView({ behavior: "smooth" });
-        }
-    </script>
-
-    <!-- Hero Section -->
-    <section id="home" class="hero">
-        <div class="container">
-            <h1>We Build Modern Web Applications</h1>
-            <p class="lead mt-3">Fast • Secure • Scalable • Custom Solutions for Every Business</p>
-            <a onclick="scrollToSection('contact')" class="btn btn-light btn-lg mt-3">Get Started</a>
+    <!-- HERO -->
+    <section id="home">
+        <div class="container text-center">
+            <h1 class="fw-bold display-5">Modern Web Solutions for Your Business</h1>
+            <p class="mt-3 fs-5">Scalable • Secure • Fast – Built with the Best Technologies</p>
+            <a href="#contact" class="btn btn-light btn-lg mt-4">Get in Touch</a>
         </div>
     </section>
 
-    <!-- Services -->
-    <section id="services" class="py-5">
+    <!-- SERVICES -->
+    <section id="services" class="soft-section">
         <div class="container">
-            <h2 class="text-center mb-4 section-title">Our Services</h2>
+            <h2 class="text-center section-title">Our Services</h2>
             <div class="row g-4">
-
                 <div class="col-md-4">
-                    <div class="card service-card p-4 text-center shadow-sm">
-                        <h5 class="fw-bold">Web Development</h5>
-                        <p>Large-scale & small-scale applications using latest modern technologies.</p>
+                    <div class="glass-card text-center shadow-sm">
+                        <i class="bi bi-window-sidebar fs-1 text-primary"></i>
+                        <h5 class="fw-bold mt-3">Web Development</h5>
+                        <p>High-quality applications for businesses of any size.</p>
                     </div>
                 </div>
-
                 <div class="col-md-4">
-                    <div class="card service-card p-4 text-center shadow-sm">
-                        <h5 class="fw-bold">UI / UX Design</h5>
-                        <p>Responsive, clean, visually appealing interfaces for modern web apps.</p>
+                    <div class="glass-card text-center shadow-sm">
+                        <i class="bi bi-palette-fill fs-1 text-danger"></i>
+                        <h5 class="fw-bold mt-3">UI / UX Design</h5>
+                        <p>Beautiful, responsive and user-friendly design.</p>
                     </div>
                 </div>
-
                 <div class="col-md-4">
-                    <div class="card service-card p-4 text-center shadow-sm">
-                        <h5 class="fw-bold">API & Backend</h5>
-                        <p>Secure backend development using .NET Core, Node.js, Firebase & more.</p>
+                    <div class="glass-card text-center shadow-sm">
+                        <i class="bi bi-hdd-network-fill fs-1 text-success"></i>
+                        <h5 class="fw-bold mt-3">Backend / API</h5>
+                        <p>Secure backend systems built with .NET Core & Cloud.</p>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
 
-    <!-- Technologies -->
-    <section id="technologies" class="py-5 bg-light">
+    <!-- TECHNOLOGIES -->
+    <section id="technologies" class="py-5">
         <div class="container">
-            <h2 class="text-center mb-4 section-title">Technologies We Use</h2>
-
+            <h2 class="text-center section-title">Technologies We Use</h2>
             <div class="row g-4 text-center">
-
                 <div class="col-md-3">
-                    <div class="card tech-card p-4 shadow-sm">
-                        <h5 class="fw-bold">Angular</h5>
-                        <p class="text-muted">Enterprise Frontend Apps</p>
+                    <div class="glass-card">
+                        <i class="bi bi-braces fs-1 text-primary"></i>
+                        <h5 class="fw-bold mt-3">Angular</h5>
+                        <p class="text-muted">Enterprise applications.</p>
                     </div>
                 </div>
-
                 <div class="col-md-3">
-                    <div class="card tech-card p-4 shadow-sm">
-                        <h5 class="fw-bold">React</h5>
-                        <p class="text-muted">Lightning-Fast SPA Development</p>
+                    <div class="glass-card">
+                        <i class="bi bi-lightning-fill fs-1 text-info"></i>
+                        <h5 class="fw-bold mt-3">React</h5>
+                        <p class="text-muted">Fast single-page apps.</p>
                     </div>
                 </div>
-
                 <div class="col-md-3">
-                    <div class="card tech-card p-4 shadow-sm">
-                        <h5 class="fw-bold">.NET Core</h5>
-                        <p class="text-muted">High-Performance Backends</p>
+                    <div class="glass-card">
+                        <i class="bi bi-cpu-fill fs-1 text-dark"></i>
+                        <h5 class="fw-bold mt-3">.NET Core</h5>
+                        <p class="text-muted">High-speed APIs.</p>
                     </div>
                 </div>
-
                 <div class="col-md-3">
-                    <div class="card tech-card p-4 shadow-sm">
-                        <h5 class="fw-bold">MSSQL / Firebase</h5>
-                        <p class="text-muted">Secure Cloud & Database Solutions</p>
+                    <div class="glass-card">
+                        <i class="bi bi-database-fill fs-1 text-success"></i>
+                        <h5 class="fw-bold mt-3">SQL / Firebase</h5>
+                        <p class="text-muted">Secure database systems.</p>
                     </div>
                 </div>
-
             </div>
-
         </div>
     </section>
 
-    <!-- About -->
-    <section id="about" class="py-5">
+    <!-- ABOUT -->
+    <section id="about" class="soft-section">
         <div class="container">
-            <h2 class="text-center mb-4 section-title">About Us</h2>
-            <p class="text-center mx-auto" style="max-width: 700px;">
-                RDMWebTech is a modern web development company specializing in high-quality, 
-                scalable, and fast web applications. We use leading technologies like Angular, 
-                React, .NET Core, MSSQL Server, and Firebase to create powerful digital products.
+            <h2 class="text-center section-title">About Us</h2>
+            <p class="text-center fs-5">
+                RDMWebTech delivers powerful modern web applications with clean code,
+                advanced UI, and scalable infrastructure for long-term growth.
             </p>
         </div>
     </section>
 
-    <!-- Contact Information Section -->
-    <section id="contact" class="py-5 bg-light">
+    <!-- CONTACT -->
+    <section id="contact" class="py-5">
         <div class="container">
-            <h2 class="text-center mb-4 section-title">Contact Information</h2>
-
-            <div class="row justify-content-center g-4">
-
+            <h2 class="text-center section-title">Contact Information</h2>
+            <div class="row g-4 justify-content-center">
                 <div class="col-md-4">
-                    <div class="card contact-card text-center p-4 shadow-sm border-0">
-                        <span style="font-size: 40px;">📧</span>
+                    <div class="glass-card text-center shadow-sm">
+                        <i class="bi bi-envelope-fill text-primary"></i>
                         <h5 class="fw-bold mt-3">Email</h5>
                         <p class="text-muted">ramana9000r@gmail.com</p>
                     </div>
                 </div>
-
                 <div class="col-md-4">
-                    <div class="card contact-card text-center p-4 shadow-sm border-0">
-                        <span style="font-size: 40px;">📱</span>
+                    <div class="glass-card text-center shadow-sm">
+                        <i class="bi bi-telephone-fill text-success"></i>
                         <h5 class="fw-bold mt-3">Phone</h5>
                         <p class="text-muted">8179479516</p>
                     </div>
                 </div>
-
                 <div class="col-md-4">
-                    <div class="card contact-card text-center p-4 shadow-sm border-0">
-                        <span style="font-size: 40px;">📍</span>
+                    <div class="glass-card text-center shadow-sm">
+                        <i class="bi bi-geo-alt-fill text-danger"></i>
                         <h5 class="fw-bold mt-3">Location</h5>
                         <p class="text-muted">India</p>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
 
-    <!-- Footer -->
+    <!-- FOOTER -->
     <footer>
-        <h5>RDMWebTech</h5>
-        <p>Email: ramana9000r@gmail.com | Phone: 8179479516</p>
-        <p class="mt-2">© 2025 RDMWebTech. All Rights Reserved.</p>
+        <p class="mb-0">© 2025 RDMWebTech. All Rights Reserved.</p>
     </footer>
 
-    <!-- Bootstrap JS -->
+    <!-- BOOTSTRAP JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- HEADER SCROLL JS -->
+    <script>
+        window.addEventListener('scroll', function() {
+            const header = document.getElementById('mainHeader');
+            if (window.scrollY > 50) {
+                header.classList.add('scrolled');
+            } else {
+                header.classList.remove('scrolled');
+            }
+        });
+    </script>
 
 </body>
 </html>
