--- a/index.html
+++ b/index.html
@@ -2,132 +2,96 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RDMWebTech – Modern Web Development</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RDMWebTech.com – Modern Web Development</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
-
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <style>
-        /* BODY */
         body {
             scroll-behavior: smooth;
             font-family: 'Segoe UI', sans-serif;
             background: #f5f7fa;
-            margin: 0;
-            padding: 0;
         }
 
-        /* HEADER (GLASS + GRADIENT ON SCROLL) */
+        /* HEADER */
         header {
             position: fixed;
             top: 0;
             width: 100%;
             z-index: 999;
-            transition: all 0.4s ease;
-            backdrop-filter: blur(12px);
-            background: rgba(255, 255, 255, 0.15);
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-        }
-
-        header.scrolled {
-            background: linear-gradient(135deg, #6a11cb, #2575fc);
-            box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+            background-color: #111;
         }
 
         .navbar-nav .nav-link {
-            color: #222;
-            font-weight: 600;
-            transition: color 0.3s;
-        }
-
-        header.scrolled .nav-link {
-            color: #fff;
+            color: #fff !important;
+            font-weight: 500;
+            margin-left: 20px;
         }
 
         .navbar-nav .nav-link:hover {
-            color: #2575fc;
+            color: #0d6efd !important;
         }
 
-        /* HERO */
+        /* HERO SECTION */
         #home {
-            padding-top: 160px;
+            padding-top: 120px;
             padding-bottom: 120px;
-            background: linear-gradient(135deg, #6a11cb, #2575fc);
-            color: #fff;
             text-align: center;
-            border-bottom-left-radius: 60px;
-            border-bottom-right-radius: 60px;
+            background: #0d6efd; /* Modern blue background */
+            color: white;
         }
 
         #home h1 {
-            font-weight: 700;
             font-size: 3rem;
+            font-weight: 700;
         }
 
         #home p {
-            font-size: 1.2rem;
-            margin-top: 20px;
+            font-size: 1.25rem;
         }
 
-        #home .btn {
-            margin-top: 30px;
-        }
-
-        /* SECTION TITLES */
+        /* SECTIONS */
         .section-title {
             font-weight: 700;
             font-size: 2rem;
             margin-bottom: 40px;
         }
 
-        /* GLASS CARDS */
         .glass-card {
-            background: rgba(255, 255, 255, 0.65);
-            backdrop-filter: blur(12px);
-            border-radius: 18px;
+            background: rgba(255, 255, 255, 0.85);
+            border-radius: 16px;
             padding: 25px;
-            border: 1px solid rgba(255, 255, 255, 0.4);
+            border: 1px solid rgba(0, 0, 0, 0.1);
             transition: 0.3s;
-        }
-
-        .glass-card:hover {
-            transform: translateY(-6px);
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
-        }
-
-        /* SECTIONS */
-        .soft-section {
-            background: linear-gradient(180deg, #ffffff, #f1f4f9);
-            padding: 60px 0;
-        }
-
-        /* CONTACT CARDS */
-        .contact-card i {
-            font-size: 40px;
-            margin-bottom: 10px;
-        }
-
-        /* FOOTER */
-        footer {
-            background: #111;
-            color: #ccc;
-            padding: 30px 0;
             text-align: center;
         }
 
-        /* RESPONSIVE */
-        @media(max-width:768px){
-            #home h1 {
-                font-size: 2rem;
-            }
+        .glass-card:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
+        }
+
+        .soft-section {
+            background: #f1f4f9;
+            padding: 60px 0;
+        }
+
+        footer {
+            background: #111;
+            color: #ccc;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        html {
+            scroll-padding-top: 70px;
         }
     </style>
 </head>
@@ -135,31 +99,68 @@
 <body>
 
     <!-- NAVBAR -->
-    <header id="mainHeader">
-        <nav class="navbar navbar-expand-lg container py-3">
-            <a class="navbar-brand fw-bold fs-3" href="#">RDMWebTech</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <header>
+    <nav class="navbar navbar-expand-lg container px-3">
+        <a class="navbar-brand fw-bold fs-4 text-white" href="#">RDMWebTech.com</a>
+        <button class="navbar-toggler text-white" type="button" data-bs-toggle="offcanvas"
+            data-bs-target="#mobileMenu" aria-controls="mobileMenu">
+            <i class="bi bi-list fs-2"></i>
+        </button>
 
-            <div class="collapse navbar-collapse" id="navMenu">
-                <ul class="navbar-nav ms-auto fw-semibold">
-                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#technologies">Technologies</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+        <!-- Desktop menu -->
+        <div class="collapse navbar-collapse justify-content-end d-none d-lg-flex" id="navMenu">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="javascript:void(0)" onclick="scrollToSection('home')">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="javascript:void(0)" onclick="scrollToSection('services')">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="javascript:void(0)" onclick="scrollToSection('technologies')">Technologies</a></li>
+                <li class="nav-item"><a class="nav-link" href="javascript:void(0)" onclick="scrollToSection('about')">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="javascript:void(0)" onclick="scrollToSection('contact')">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
 
-    <!-- HERO -->
+    <!-- Mobile Offcanvas Menu -->
+    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="mobileMenu" aria-labelledby="mobileMenuLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title px-2" id="mobileMenuLabel">RDMWebTech.com</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body px-3">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link text-white mb-2" href="javascript:void(0)"
+                        onclick="scrollToSection('home'); closeOffcanvas()">Home</a></li>
+                <li class="nav-item"><a class="nav-link text-white mb-2" href="javascript:void(0)"
+                        onclick="scrollToSection('services'); closeOffcanvas()">Services</a></li>
+                <li class="nav-item"><a class="nav-link text-white mb-2" href="javascript:void(0)"
+                        onclick="scrollToSection('technologies'); closeOffcanvas()">Technologies</a></li>
+                <li class="nav-item"><a class="nav-link text-white mb-2" href="javascript:void(0)"
+                        onclick="scrollToSection('about'); closeOffcanvas()">About</a></li>
+                <li class="nav-item"><a class="nav-link text-white mb-2" href="javascript:void(0)"
+                        onclick="scrollToSection('contact'); closeOffcanvas()">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</header>
+
+
+    <!-- Smooth scroll JS -->
+    <script>
+        function scrollToSection(id) {
+            document.getElementById(id).scrollIntoView({ behavior: "smooth" });
+        }
+
+        function closeOffcanvas() {
+            const offcanvas = bootstrap.Offcanvas.getInstance(document.getElementById('mobileMenu'));
+            if (offcanvas) offcanvas.hide();
+        }
+    </script>
+
+    <!-- HERO SECTION -->
     <section id="home">
         <div class="container text-center">
-            <h1 class="fw-bold display-5">Modern Web Solutions for Your Business</h1>
-            <p class="mt-3 fs-5">Scalable • Secure • Fast – Built with the Best Technologies</p>
-            <a href="#contact" class="btn btn-light btn-lg mt-4">Get in Touch</a>
+            <h1>Modern Web Solutions for Your Business</h1>
+            <p>Scalable • Secure • Fast – Built with the Best Technologies</p>
         </div>
     </section>
 
@@ -169,21 +170,21 @@
             <h2 class="text-center section-title">Our Services</h2>
             <div class="row g-4">
                 <div class="col-md-4">
-                    <div class="glass-card text-center shadow-sm">
+                    <div class="glass-card">
                         <i class="bi bi-window-sidebar fs-1 text-primary"></i>
                         <h5 class="fw-bold mt-3">Web Development</h5>
                         <p>High-quality applications for businesses of any size.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="glass-card text-center shadow-sm">
+                    <div class="glass-card">
                         <i class="bi bi-palette-fill fs-1 text-danger"></i>
                         <h5 class="fw-bold mt-3">UI / UX Design</h5>
-                        <p>Beautiful, responsive and user-friendly design.</p>
+                        <p>Beautiful, responsive, and user-friendly design.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="glass-card text-center shadow-sm">
+                    <div class="glass-card">
                         <i class="bi bi-hdd-network-fill fs-1 text-success"></i>
                         <h5 class="fw-bold mt-3">Backend / API</h5>
                         <p>Secure backend systems built with .NET Core & Cloud.</p>
@@ -202,28 +203,28 @@
                     <div class="glass-card">
                         <i class="bi bi-braces fs-1 text-primary"></i>
                         <h5 class="fw-bold mt-3">Angular</h5>
-                        <p class="text-muted">Enterprise applications.</p>
+                        <p class="text-muted">Enterprise applications</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="glass-card">
                         <i class="bi bi-lightning-fill fs-1 text-info"></i>
                         <h5 class="fw-bold mt-3">React</h5>
-                        <p class="text-muted">Fast single-page apps.</p>
+                        <p class="text-muted">Fast single-page apps</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="glass-card">
                         <i class="bi bi-cpu-fill fs-1 text-dark"></i>
                         <h5 class="fw-bold mt-3">.NET Core</h5>
-                        <p class="text-muted">High-speed APIs.</p>
+                        <p class="text-muted">High-speed APIs</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="glass-card">
                         <i class="bi bi-database-fill fs-1 text-success"></i>
                         <h5 class="fw-bold mt-3">SQL / Firebase</h5>
-                        <p class="text-muted">Secure database systems.</p>
+                        <p class="text-muted">Secure database systems</p>
                     </div>
                 </div>
             </div>
@@ -247,22 +248,22 @@
             <h2 class="text-center section-title">Contact Information</h2>
             <div class="row g-4 justify-content-center">
                 <div class="col-md-4">
-                    <div class="glass-card text-center shadow-sm">
-                        <i class="bi bi-envelope-fill text-primary"></i>
+                    <div class="glass-card">
+                        <i class="bi bi-envelope-fill fs-1 text-primary"></i>
                         <h5 class="fw-bold mt-3">Email</h5>
                         <p class="text-muted">ramana9000r@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="glass-card text-center shadow-sm">
-                        <i class="bi bi-telephone-fill text-success"></i>
+                    <div class="glass-card">
+                        <i class="bi bi-telephone-fill fs-1 text-success"></i>
                         <h5 class="fw-bold mt-3">Phone</h5>
                         <p class="text-muted">8179479516</p>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="glass-card text-center shadow-sm">
-                        <i class="bi bi-geo-alt-fill text-danger"></i>
+                    <div class="glass-card">
+                        <i class="bi bi-geo-alt-fill fs-1 text-danger"></i>
                         <h5 class="fw-bold mt-3">Location</h5>
                         <p class="text-muted">India</p>
                     </div>
@@ -273,23 +274,11 @@
 
     <!-- FOOTER -->
     <footer>
-        <p class="mb-0">© 2025 RDMWebTech. All Rights Reserved.</p>
+        <p class="mb-0">© 2025 RDMWebTech.com. All Rights Reserved.</p>
     </footer>
 
-    <!-- BOOTSTRAP JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- HEADER SCROLL JS -->
-    <script>
-        window.addEventListener('scroll', function() {
-            const header = document.getElementById('mainHeader');
-            if (window.scrollY > 50) {
-                header.classList.add('scrolled');
-            } else {
-                header.classList.remove('scrolled');
-            }
-        });
-    </script>
-
 </body>
+
 </html>
