--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- NAVBAR -->
     <header>
     <nav class="navbar navbar-expand-lg container px-3">
-        <a class="navbar-brand fw-bold fs-4 text-white" href="#">RDMWebTech.com</a>
+        <a class="navbar-brand fw-bold fs-4 text-white" >RDMWebTech.com</a>
         <button class="navbar-toggler text-white" type="button" data-bs-toggle="offcanvas"
             data-bs-target="#mobileMenu" aria-controls="mobileMenu">
             <i class="bi bi-list fs-2"></i>
