Add SEO meta tags, structured data, sitemap and robots.txt

--- a/index.html
+++ b/index.html
@@ -5,13 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RDMWebTech.com – Modern Web Development</title>
+    <meta name="description" content="RDMWebTech delivers modern, scalable, and secure web applications using Angular, React, .NET Core, MSSQL, and Firebase.">
+    <meta name="keywords" content="Web Development, UI/UX Design, Angular, React, .NET Core, MSSQL, Firebase, Modern Web Apps, RDMWebTech">
+    <meta name="author" content="RDMWebTech">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:title" content="RDMWebTech.com – Modern Web Development">
+    <meta property="og:description" content="RDMWebTech delivers modern, scalable, and secure web applications using Angular, React, .NET Core, MSSQL, and Firebase.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://rdmwebtech.com/">
+    <meta property="og:image" content="https://rdmwebtech.com/images/og-image.png">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="RDMWebTech.com – Modern Web Development">
+    <meta name="twitter:description" content="RDMWebTech delivers modern, scalable, and secure web applications using Angular, React, .NET Core, MSSQL, and Firebase.">
+    <meta name="twitter:image" content="https://rdmwebtech.com/images/og-image.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <style>
         body {
@@ -95,6 +112,7 @@
         }
     </style>
 </head>
+
 
 <body>
 
