Add Google verification HTML file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="RDMWebTech delivers modern, scalable, and secure web applications using Angular, React, .NET Core, MSSQL, and Firebase.">
     <meta name="keywords" content="Web Development, UI/UX Design, Angular, React, .NET Core, MSSQL, Firebase, Modern Web Apps, RDMWebTech">
     <meta name="author" content="RDMWebTech">
+    <!-- Google Site Verification -->
+    <meta name="google-site-verification" content="SWvx-B6xCdZqbUD8SgnCO0i7UrLIqXV0KJA4grmvJRE" />
 
     <!-- Open Graph / Social Media -->
     <meta property="og:title" content="RDMWebTech.com – Modern Web Development">
