--- a/index.html
+++ b/index.html
@@ -28,10 +28,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <style>
+        :root {
+            --bg-color: #f5f7fa;
+            --text-color: #111;
+            --card-bg: rgba(255, 255, 255, 0.92);
+            --footer-bg: #111;
+            --footer-text: #ccc;
+        }
+
+        /* DARK THEME VARIABLES */
+        .dark-mode {
+            --bg-color: #0f0f0f;
+            --text-color: #f5f5f5;
+            --card-bg: rgba(40, 40, 40, 0.92);
+            --footer-bg: #000;
+            --footer-text: #aaa;
+        }
+
         body {
             font-family: 'Segoe UI', sans-serif;
             scroll-behavior: smooth;
-            background: #f5f7fa;
+            background: var(--bg-color);
+            color: var(--text-color);
+            transition: 0.3s ease-in-out;
         }
 
         header {
@@ -56,7 +75,17 @@
             scroll-padding-top: 80px;
         }
 
-        /* Modern Hero Section */
+        /* Theme Button */
+        .theme-toggle {
+            background: none;
+            border: none;
+            color: #fff;
+            font-size: 22px;
+            margin-left: 20px;
+            cursor: pointer;
+        }
+
+        /* Hero */
         #home {
             padding: 160px 20px;
             background: linear-gradient(135deg, #0d6efd 0%, #011c45 100%);
@@ -64,55 +93,19 @@
             text-align: center;
         }
 
-        #home h1 {
-            font-size: 3.2rem;
-            font-weight: 800;
-            animation: fadeInDown 0.8s ease;
-        }
-
-        #home p {
-            font-size: 1.3rem;
-            margin-top: 15px;
-            opacity: 0.9;
-            animation: fadeInUp 1s ease;
-        }
-
         .hero-buttons a {
             margin: 10px;
             font-size: 1.1rem;
         }
 
-        @keyframes fadeInDown {
-            from {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
         /* Cards */
         .glass-card {
-            background: rgba(255, 255, 255, 0.92);
+            background: var(--card-bg);
             padding: 30px;
             border-radius: 16px;
             border: 1px solid rgba(0, 0, 0, 0.08);
             text-align: center;
+            transition: 0.3s;
         }
 
         .section-title {
@@ -122,26 +115,27 @@
         }
 
         footer {
-            background: #111;
-            color: #ccc;
+            background: var(--footer-bg);
+            color: var(--footer-text);
             text-align: center;
             padding: 15px 0;
+            transition: 0.3s;
         }
 
-        /* WhatsApp Floating Button */
+        /* WhatsApp Floating Button SMALL SIZE */
         .whatsapp-btn {
             position: fixed;
             bottom: 25px;
             right: 25px;
             background: #25D366;
             color: white;
-            width: 60px;
-            height: 60px;
+            width: 46px;
+            height: 46px;
             border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 32px;
+            font-size: 25px;
             box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
             z-index: 9999;
             text-decoration: none;
@@ -159,6 +153,11 @@
     <header>
         <nav class="navbar navbar-expand-lg container px-3">
             <a class="navbar-brand fw-bold fs-4 text-white">RDMWebTech.com</a>
+
+            <!-- Theme Toggle Button -->
+            <button class="theme-toggle" id="themeBtn">
+                <i class="bi bi-moon-stars-fill" id="themeIcon"></i>
+            </button>
 
             <button class="navbar-toggler text-white" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#mobileMenu">
@@ -192,7 +191,7 @@
         </div>
     </header>
 
-    <!-- MODERN HERO SECTION -->
+    <!-- HERO SECTION -->
     <section id="home">
         <div class="container">
             <h3>Build Powerful, Modern Web Applications</h3>
@@ -333,13 +332,13 @@
         <p class="mb-0">© 2025 RDMWebTech.com. All Rights Reserved.</p>
     </footer>
 
-    <!-- Floating WhatsApp Button -->
+    <!-- WhatsApp Button SMALL -->
     <a href="https://wa.me/918179479516?text=Hello%20RDMWebTech%2C%20I%20am%20interested%20in%20your%20web%20development%20services."
         class="whatsapp-btn" target="_blank">
         <i class="bi bi-whatsapp"></i>
     </a>
 
-    <!-- SMOOTH SCROLL WITHOUT URL # -->
+    <!-- Smooth Scroll -->
     <script>
         document.querySelectorAll('a[data-target]').forEach(link => {
             link.addEventListener('click', function (e) {
@@ -348,6 +347,31 @@
                 const target = document.getElementById(id);
                 if (target) target.scrollIntoView({ behavior: 'smooth' });
             });
+        });
+    </script>
+
+    <!-- THEME SCRIPT -->
+    <script>
+        const body = document.body;
+        const themeBtn = document.getElementById("themeBtn");
+        const themeIcon = document.getElementById("themeIcon");
+
+        // Load saved theme
+        if (localStorage.getItem("theme") === "dark") {
+            body.classList.add("dark-mode");
+            themeIcon.classList.replace("bi-moon-stars-fill", "bi-sun-fill");
+        }
+
+        themeBtn.addEventListener("click", () => {
+            body.classList.toggle("dark-mode");
+
+            if (body.classList.contains("dark-mode")) {
+                themeIcon.classList.replace("bi-moon-stars-fill", "bi-sun-fill");
+                localStorage.setItem("theme", "dark");
+            } else {
+                themeIcon.classList.replace("bi-sun-fill", "bi-moon-stars-fill");
+                localStorage.setItem("theme", "light");
+            }
         });
     </script>
 
