--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+<!-- Favicon & App Icons -->
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<link rel="icon" href="https://rdmwebtech.com/assets/favicon.ico" type="image/x-icon">
+
+<link rel="icon" type="image/png" sizes="32x32" href="https://rdmwebtech.com/assets/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://rdmwebtech.com/assets/favicon-16x16.png">
+
+<link rel="apple-touch-icon" sizes="180x180" href="https://rdmwebtech.com/assets/apple-touch-icon.png">
+
+<!-- SEO Preview Image -->
+<link rel="image_src" href="https://rdmwebtech.com/images/og-image.png">
 
     <!-- Bootstrap + Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
