--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
 <meta property="og:url" content="https://rdmwebtech.com/">
 <meta property="og:image" content="https://rdmwebtech.com/images/og-image.png">
 
-<!-- ✅ Correct Favicon (Root Folder Version – Google Recommended) -->
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<!-- Favicon Links - Google Recommended Format -->
+<link rel="icon" href="https://rdmwebtech.com/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://rdmwebtech.com/favicon.ico" type="image/x-icon">
+<link rel="icon" type="image/png" sizes="32x32" href="https://rdmwebtech.com/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://rdmwebtech.com/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://rdmwebtech.com/apple-touch-icon.png">
 
 <!-- SEO Preview Image -->
 <link rel="image_src" href="https://rdmwebtech.com/images/og-image.png">
@@ -375,7 +373,7 @@
     <!-- FOOTER -->
     <footer>
         <div class="container-fluid px-5">
-            <p class="mb-1"><strong>Email:</strong> ramana9000r@gmail.com | <strong>Phone:</strong> 8179479516 | <strong>Location:</strong> India</p>
+            <p class="mb-1"><strong>Email:</strong> <a href="mailto:ramana9000r@gmail.com" style="color: inherit;">ramana9000r@gmail.com</a> | <strong>Phone:</strong> <a href="tel:+918179479516" style="color: inherit; text-decoration: none;">+91 8179479516</a> | <strong>Location:</strong> India</p>
             <p class="footer-note mb-0">We deliver modern, secure, and scalable web applications for your business growth.</p>
             <p class="mt-2 mb-0">© 2025 RDMWebTech.com. All Rights Reserved.</p>
         </div>
