--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:image" content="https://rdmwebtech.com/images/og-image.png">
     
     <!-- Favicons -->
+     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/x-icon" href="https://rdmwebtech.com/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="https://rdmwebtech.com/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://rdmwebtech.com/favicon-16x16.png">
